# indic-reader

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  book.py  config.py  main.py  pipeline.py
app/audio/: __init__.py  cache.py  concat.py  wav.py
app/bench/: __init__.py  metrics.py
app/imaging/: __init__.py  preprocess.py
app/providers/: __init__.py  errors.py  registry.py
app/providers/llm/: base.py
app/providers/ocr/: base.py  mock.py  paddle.py
app/providers/tts/: base.py  bulbul.py  indic_parler.py  mock.py
app/store/: db.py  models.py  repository.py
app/text/: __init__.py  chunk.py  clean.py  lang_detect.py  normalize.py
clients/: __init__.py  telegram_bot.py
samples/: README.md
scripts/: bench_ocr.py  bench_tts.py  demo_page.py
tests/: test_audio.py  test_book.py  test_bulbul.py  test_chunk.py  test_clean.py  test_config.py  test_db.py  test_health.py  test_lang_detect.py  test_metrics.py  test_normalize.py  test_paddle_parse.py  test_pipeline.py  test_playback.py  test_preprocess.py  test_providers_concrete.py  test_registry.py  test_repository.py  test_smoke.py  test_telegram_bot.py  test_tts_description.py
