[project]
name = "indic-reader"
version = "0.1.0"
description = "Personal scan-to-speech reader with first-class Indian-language support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sasidharan GS" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "uvicorn>=0.29",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
