[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indic-reader"
version = "0.1.0"
description = "Personal scan-to-speech reader with first-class Indian-language support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sasidharan GS" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Heavy OCR/TTS model backends — install with `uv sync --extra models`.
# Kept out of the base install so `uv sync` and CI stay light.
models = [
    "numpy>=2.3.5",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "parler-tts",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "transformers>=4.46.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
parler-tts = { git = "https://github.com/huggingface/parler-tts.git" }
